# daily-knowledge-ingestion-assistant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
design-system/: README.md  manifest.json  tailwind.config.js
design-system/assets/favicons/: favicon-integration.html
design-system/docs/: README.md  components.md
design-system/styles/: global.css
design-system/tokens/: colors.json  motion.json  spacing.json  typography.json
design-system/tokens/themes/: dark.json  light.json  liturgical.json
docs/: CHANGELOG.md  architecture-plan.md  design-system.md  dev-setup.md  graphrag-algorithm-paper.md  market-research.md  mvp-0-plan.md
docs/design-concepts/: concept-a-observatory.html  concept-b-morning-edition.html  concept-c-briefing-room.html
notebooks/: 01_graphrag_extraction.ipynb  02_graph_construction_communities.ipynb  03_embeddings_vector_search.ipynb  PLAN_cytoscape_multilevel.md  PLAN_leiden_community_detection.md  README.md
scripts/: generate_viz.py  generate_viz_plotly.py  setup_ollama.sh
scripts/templates/: knowledge_graph.html
src/: config.py  database.py  main.py  schema.sql
src/api/: graph.py
src/ingestion/: fetcher.py  text_extractor.py
src/llm/: client.py  prompts.py
src/navigator/: agent.py  prompts.py  retriever.py
src/processing/: embedder.py  pipeline.py  summarizer.py
src/services/: graph_service.py
src/web/routes/: library.py  navigator.py
src/web/static/: chat.js  (+2 more)
tests/: conftest.py  test_api_graph.py  test_graph_service.py
(+10 files in other folders)
