[project]
name = "daily-knowledge-ingestion-assistant"
version = "0.1.0"
description = "Daily Knowledge Ingestion Assistant"
readme = "CLAUDE.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
